getStoreUploads => getStoreUploadIds
naming is more accurate given what the API call returns
