# admin-api/generated/go-server/go/model_get_store_upload_ids_response.go
@@ -1,0 +1,31 @@
+/*
+ * Cloud Symbol Server Admin API
+ *
+ * This is the API that is used to manage stores and uploads in Cloud Symbol Server
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type GetStoreUploadIdsResponse struct {
+	Items []string
+}
+
+// AssertGetStoreUploadIdsResponseRequired checks if the required fields are not zero-ed
+func AssertGetStoreUploadIdsResponseRequired(obj GetStoreUploadIdsResponse) error {
+	return nil
+}
+
+// AssertRecurseGetStoreUploadIdsResponseRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of GetStoreUploadIdsResponse (e.g. [][]GetStoreUploadIdsResponse), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseGetStoreUploadIdsResponseRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aGetStoreUploadIdsResponse, ok := obj.(GetStoreUploadIdsResponse)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertGetStoreUploadIdsResponseRequired(aGetStoreUploadIdsResponse)
+	})
+}
