# admin-api/generated/go-server/go/model_get_store_uploads_response.go
@@ -1,31 +1,0 @@
-/*
- * Cloud Symbol Server Admin API
- *
- * This is the API that is used to manage stores and uploads in Cloud Symbol Server
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type GetStoreUploadsResponse struct {
-	Items []string
-}
-
-// AssertGetStoreUploadsResponseRequired checks if the required fields are not zero-ed
-func AssertGetStoreUploadsResponseRequired(obj GetStoreUploadsResponse) error {
-	return nil
-}
-
-// AssertRecurseGetStoreUploadsResponseRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of GetStoreUploadsResponse (e.g. [][]GetStoreUploadsResponse), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseGetStoreUploadsResponseRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aGetStoreUploadsResponse, ok := obj.(GetStoreUploadsResponse)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertGetStoreUploadsResponseRequired(aGetStoreUploadsResponse)
-	})
-}
